@@ -24,13 +24,13 @@ use FindBin;
   my $exe_dir = 't/.spvm_build/work/exe';
   mkpath $exe_dir;
   
-  my $target_package_name = 'SPVM::MyExe';
+  my $target_class_name = 'MyExe';
   my $build_dir = 't/exe/.spvm_build';
   my $module_dirs = ['t/exe/lib', @INC];
   my $output_file = "$build_dir/work/myexe";
 
   my $builder_exe = SPVM::Builder::Exe->new(
-    target_package_name => $target_package_name,
+    target_package_name => $target_class_name,
     output_file => $output_file,
     build_dir => $build_dir,
     module_dirs => $module_dirs,
@@ -44,13 +44,13 @@ use FindBin;
   my $exe_dir = 't/.spvm_build/work/exe';
   mkpath $exe_dir;
   
-  my $target_package_name = 'SPVM::MyExe::Foo::Bar';
+  my $target_class_name = 'MyExe::Foo::Bar';
   my $build_dir = 't/exe/.spvm_build';
   my $module_dirs = ['t/exe/lib', @INC];
   my $output_file = "$build_dir/work/myexe";
 
   my $builder_exe = SPVM::Builder::Exe->new(
-    target_package_name => $target_package_name,
+    target_package_name => $target_class_name,
     output_file => $output_file,
     build_dir => $build_dir,
     module_dirs => $module_dirs,
